--- a/flexuse.html
+++ b/flexuse.html
@@ -51,6 +51,7 @@
             <a href="">Orders</a>
             <a href="">About us</a>
             <a href=""><i class="fa-regular fa-user"></i></a>
+            <a href=""><i class="fa-solid fa-right-from-bracket"></i></i></a>
 
         </nav>
     </header>
