--- a/flexbox.html
+++ b/flexbox.html
@@ -16,12 +16,17 @@
 
         .box {
             width: 200px;
-            height: 200px;
+
             border: 3px dashed rebeccapurple;
-            font-size: 3em;
+            /* font-size: 3em; */
+        }
+
+        .box1 {
+            order: 2;
         }
 
         #box2 {
+            order: 1;
             flex-grow: 2;
         }
     </style>
@@ -30,9 +35,28 @@
 <body>
     <h1>I am flexible right now</h1>
     <div class="container">
-        <div class="box">Box-1</div>
-        <div class="box">Box-2</div>
-        <div id="box2" class="box">Box-3</div>
+        <div id="Box1" class="box">Box-1</div>
+        <div id="box2" class="box">
+            <h3>Box-3</h3>
+            <article class="blog">
+                <h4>Blog-1</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia accusamus temporibus sapiente
+                    necessitatibus animi facilis eius quam impedit ex delectus culpa, unde ipsa corporis possimus id
+                    nemo. Minima, dicta suscipit.</p>
+            </article>
+            <article class="blog">
+                <h4>Blog-2</h4>
+                <p>Ut nulla asperiores alias, tempore blanditiis atque debitis ea. Quae voluptates ipsa suscipit
+                    voluptate corrupti quod placeat sed, eligendi quidem, fugiat id. Vel inventore consequuntur ex
+                    veniam esse voluptas non.</p>
+            </article>
+            <article class="blog">
+                <h4>Blog-3</h4>
+                <p>Eveniet dicta odio ea itaque temporibus dignissimos, asperiores praesentium. Repellendus voluptatum
+                    dolorum qui molestiae reiciendis! Ducimus consectetur aliquid odit maxime dolorum quisquam
+                    voluptates deserunt ab doloremque dolorem, itaque quae fugit.</p>
+            </article>
+        </div>
     </div>
 </body>
 
