--- a/responsive.html
+++ b/responsive.html
@@ -8,7 +8,7 @@
     <style>
         .menu-container {
             display: flex;
-            flex-wrap: wrap;
+            /* flex-wrap: wrap; */
         }
 
         .food {
